# django-tembaimporter

./: .gitignore  README.rst  pyproject.toml  setup.cfg
tembaimporter/: apps.py
tembaimporter/management/commands/: doimport.py  temba_api_import.py  temba_fix_attachment_path.py  tembaimport.py
