[metadata]
name = django-tembaimporter
version = 0.1
description = A Django app for RapidPro Temba to copy content from another install.
long_description = file: README.rst
license = Mozilla Public License 2.0 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0.6
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 4.0.6
    rapidpro-python == 2.8.5
